--- a/contact.html
+++ b/contact.html
@@ -10,12 +10,11 @@
     <header>
         <img src="logo.png" alt="Otasso Logo" />
     </header>
-
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
     </nav>
 
     <div class="section">
@@ -26,6 +25,17 @@
             <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
             <button type="submit">Send Message</button>
         </form>
+    </div>
+
+    <div class="section">
+        <p style="text-align: center; margin-top: 40px;">
+            Contact our team directly at <strong>07988 306731</strong> or
+            <strong><a href="mailto:enquiries@otasso.com">enquiries@otasso.com</a></strong><br />
+            Follow us on
+            <a href="https://instagram.com/otassoltd" target="_blank">Instagram</a>,
+            <a href="https://x.com/otassoltd" target="_blank">X</a>, and
+            <a href="https://linkedin.com/company/otasso" target="_blank">LinkedIn</a>.
+        </p>
     </div>
 
     <footer>
