--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Otasso | Tax Reduction Experts</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Otasso — Tax Reduction Experts</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <img src="logo.png" alt="Otasso Logo" />
-    </header>
+  <header>
+    <img src="logo.png" alt="Otasso Logo" />
+  </header>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
-    </nav>
+  <nav>
+    <a href="index.html" class="active">Home</a>
+    <a href="about.html">About</a>
+    <a href="services.html">Services</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-    <div class="hero">
-        <h2>Tax Smarter. Grow Faster.</h2>
-        <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
-        <a href="contact.html">Get a Free Consultation</a>
-    </div>
+  <div class="section">
+    <h1>Helping Businesses Thrive not Survive</h1>
+    <p>
+      In an age of rising taxes and declining value, Otasso equips you with world-class financial and legal strategies to protect profits, reduce liabilities, and build resilience, so your business doesn’t just stay afloat, it excels.
+    </p>
+  </div>
 
-    <footer>
-        <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
-    </footer>
+  <div class="section">
+    <h2>"You didn’t build your business to feed bureaucracy."</h2>
+    <p>
+      Otasso exists to help high-performing companies protect what they’ve earned and reinvest in what truly matters. We’re not just tax advisors, we’re your legal and financial defence to protect what you earnt.
+    </p>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
+  </footer>
 </body>
 </html>
-
