--- a/index.html
+++ b/index.html
@@ -19,6 +19,27 @@
   </nav>
 
   <div class="section">
+    </head>
+<body>
+    <header>
+        <img src="logo.png" alt="Otasso Logo" />
+    </header>
+
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+
+    <div class="hero">
+        <h2>Tax Smarter. Grow Faster.</h2>
+        <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
+        <a href="contact.html">Get a Free Consultation</a>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
     <h1>Helping Businesses Thrive not Survive</h1>
     <p>
       In an age of rising taxes and declining value, Otasso equips you with world-class financial and legal strategies to protect profits, reduce liabilities, and build resilience, so your business doesn’t just stay afloat, it excels.
