--- a/index.html
+++ b/index.html
@@ -8,43 +8,34 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Otasso Logo" />
+    <img src="logo.png" alt="Otasso Logo" class="logo" />
+    <nav>
+      <a href="index.html" class="active">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
-  <nav>
-    <a href="index.html" class="active">Home</a>
-    <a href="about.html">About</a>
-    <a href="services.html">Services</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+  <section class="hero">
+    <h1>Tax Smarter. Grow Faster.</h1>
+    <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
+    <a href="contact.html" class="button">Get a Free Consultation</a>
+  </section>
 
-  <div class="section">
-    </head>
-<body>
-    <header>
-        <img src="logo.png" alt="Otasso Logo" />
-    </header>
-
-
-        <h2>Tax Smarter. Grow Faster.</h2>
-        <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
-        <a href="contact.html">Get a Free Consultation</a>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
-    <h1>Helping Businesses Thrive not Survive</h1>
+  <section class="section">
+    <h2>Helping Businesses Thrive — Not Just Survive</h2>
     <p>
-      In an age of rising taxes and declining value, Otasso equips you with world-class financial and legal strategies to protect profits, reduce liabilities, and build resilience, so your business doesn’t just stay afloat, it excels.
+      In an age of rising taxes and declining value, Otasso equips you with world-class financial and legal strategies to protect profits, reduce liabilities, and build resilience — so your business doesn’t just stay afloat, it excels.
     </p>
-  </div>
+  </section>
 
-  <div class="section">
-    <h2>"You didn’t build your business to feed bureaucracy."</h2>
+  <section class="section alt">
+    <h2>You didn’t build your business to feed bureaucracy.</h2>
     <p>
-      Otasso exists to help high-performing companies protect what they’ve earned and reinvest in what truly matters. We’re not just tax advisors, we’re your legal and financial defence to protect what you earnt.
+      Otasso exists to help high-performing companies protect what they’ve earned and reinvest in what truly matters. We’re not just tax advisors — we’re your legal and financial edge.
     </p>
-  </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
