--- a/index.html
+++ b/index.html
@@ -16,7 +16,16 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
+  
+<section class="hero">
+  <div class="hero-bg"></div>
+  <div class="hero-content">
+    <h1>Tax Smarter. Grow Faster.</h1>
+    <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
+    <a href="contact.html" class="button">Get a Free Consultation</a>
+  </div>
+  
+</section>
   <section class="hero">
     <h1>Tax Smarter. Grow Faster.</h1>
     <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
