--- a/index.html
+++ b/index.html
@@ -20,17 +20,11 @@
 <section class="hero">
   <div class="hero-bg"></div>
   <div class="hero-content">
-    <h1>Tax Smarter. Grow Faster.</h1>
+    <h1>Thrive, Not Survive</h1>
     <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
     <a href="contact.html" class="button">Get a Free Consultation</a>
   </div>
   
-</section>
-  <section class="hero">
-    <h1>Tax Smarter. Grow Faster.</h1>
-    <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
-    <a href="contact.html" class="button">Get a Free Consultation</a>
-  </section>
 
   <section class="section">
     <h2>Helping Businesses Thrive — Not Just Survive</h2>
