--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 <section class="hero">
   <div class="hero-bg"></div>
   <div class="hero-content">
-    <h1>Thrive, Not Survive</h1>
+    <h1>Thrive, Not Survive.</h1>
     <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
     <a href="contact.html" class="button">Get a Free Consultation</a>
   </div>
   
-
-  <section class="section">
+</section>
+  <section class="hero">
+  
     <h2>Helping Businesses Thrive — Not Just Survive</h2>
     <p>
       In an age of rising taxes and declining value, Otasso equips you with world-class financial and legal strategies to protect profits, reduce liabilities, and build resilience — so your business doesn’t just stay afloat, it excels.
