--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
@@ -16,18 +17,17 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-  
-<section class="hero">
-  <div class="hero-bg"></div>
-  <div class="hero-content">
-    <h1>Thrive, Not Survive.</h1>
-    <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
-    <a href="contact.html" class="button">Get a Free Consultation</a>
-  </div>
-  
-</section>
+
   <section class="hero">
-  
+    <div class="hero-bg"></div>
+    <div class="hero-content">
+      <h1>Thrive, Not Survive.</h1>
+      <p>Founded by Jai Kurbaan in 2023, Otasso helps you reduce tax burdens legally and effectively.</p>
+      <a href="contact.html" class="button">Get a Free Consultation</a>
+    </div>
+  </section>
+
+  <section class="section">
     <h2>Helping Businesses Thrive — Not Just Survive</h2>
     <p>
       In an age of rising taxes and declining value, Otasso equips you with world-class financial and legal strategies to protect profits, reduce liabilities, and build resilience — so your business doesn’t just stay afloat, it excels.
@@ -44,5 +44,6 @@
   <footer>
     <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
