--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
     <title>Otasso Services</title>
     <link rel="stylesheet" href="style.css" />
 </head>
+    <body class="subpage">
 <body>
     <header>
         <img src="logo.png" alt="Otasso Logo" />
