--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Otasso — Tax Reduction Experts</title>
   <link rel="stylesheet" href="style.css" />
+  
+  <link rel="icon" type="image/x-icon" href="logo.png">
 </head>
 <body>
+
 
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
