--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Otasso — Tax Reduction Experts</title>
   <link rel="stylesheet" href="style.css" />
   
-  <link rel="icon" type="image/x-icon" href="logo.png">
+  <link rel="icon" type="image/x-icon" href="icon.jpg.png">
 </head>
 <body>
 
