--- a/about.html
+++ b/about.html
@@ -1,33 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Otasso</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About — Otasso</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-    <body class="subpage">
-<body>
-    <header>
-        <img src="logo.png" alt="Otasso Logo" />
-    </header>
-
+<body class="subpage">
+  <header>
+    <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html" class="active">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html">Contact</a>
     </nav>
+  </header>
 
-    <div class="section">
-        <h3>About Otasso</h3>
-        <p>
-            Founded in 2023 by Jai Kurbaan, Otasso blends legal precision with financial expertise to help businesses
-            minimize tax burdens and maximize growth. We specialize in strategic tax reduction solutions that are both
-            ethical and effective, empowering companies to scale with confidence.
-        </p>
-
-        <h3>About Jai Kurbaan</h3>
+  <section class="section">
+    <h2>About Otasso</h2>
+    <p>Founded in 2023 by Jai Kurbaan, Otasso was created with one mission: to help businesses grow by reducing tax burdens legally, efficiently, and strategically. We combine expert legal insight with deep financial strategy to protect your profit and position you for sustainable growth.</p>
+  </section>
+ <h3>About Jai Kurbaan</h3>
         <p>
             Jai Kurbaan is a driven financial strategist with a passion for innovation and precision. Currently preparing
             to study Accounting and Finance at a top Russell Group university, he is also completing a summer finance
@@ -39,10 +33,8 @@
             eye for efficiency, leadership of the content creation team, and expertise in AI-driven analytics continue to
             strengthen Stanton Penn’s competitive edge and deliver measurable results.
         </p>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
-    </footer>
+  <footer>
+    <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
+  </footer>
 </body>
 </html>
