--- a/services.html
+++ b/services.html
@@ -1,6 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Services — Otasso</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="subpage">
+  <header>
+    <img src="logo.png" alt="Otasso Logo" class="logo" />
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html" class="active">Services</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <section class="section">
+    <h2>Our Services</h2>
+    <p>We specialize in advanced tax reduction planning, asset protection, and cross-border structuring. Whether you're scaling domestically or internationally, Otasso offers customized legal and financial solutions designed for growth-minded entrepreneurs.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
+  </footer>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Otasso Services</title>
