--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Otasso</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact — Otasso</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-    <body class="subpage">
-<body>
-    <header>
-        <img src="logo.png" alt="Otasso Logo" />
-    </header>
+<body class="subpage">
+  <header>
+    <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html" class="active">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html" class="active">Contact</a>
     </nav>
+  </header>
 
-    <div class="section">
-        <h3>Contact Us</h3>
-        <form action="mailto:contact@otasso.com" method="POST" enctype="text/plain">
-            <input type="text" name="name" placeholder="Your Name" required />
-            <input type="email" name="email" placeholder="Your Email" required />
-            <textarea name="message" rows="6" placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </div>
+  <section class="section">
+    <h2>Contact Us</h2>
+    <p>Ready to reduce your tax burden and grow your business? Contact Otasso for a free consultation. We're here to give your business the legal and financial edge it deserves.</p>
+    <a href="mailto:consult@otasso.com" class="button">Book a Consultation</a>
+  </section>
 
     <div class="section">
         <p style="text-align: center; margin-top: 40px;">
