--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,48 @@
     <p>Ready to reduce your tax burden and grow your business? Contact Otasso for a free consultation. We're here to give your business the legal and financial edge it deserves.</p>
     <a href="mailto:consult@otasso.com" class="button">Book a Consultation</a>
   </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact — Otasso</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body class="subpage">
+  <header>
+    <img src="logo.png" alt="Otasso Logo" class="logo" />
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="services.html">Services</a>
+      <a href="contact.html" class="active">Contact</a>
+    </nav>
+  </header>
 
+  <section class="section">
+    <h2>Contact Us</h2>
+    <p>Ready to reduce your tax burden and grow your business? Fill out the form below and we'll be in touch shortly.</p>
+
+    <form class="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" required />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="_replyto" required />
+      </div>
+
+      <div class="form-group">
+        <label for="message">Your Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+      </div>
+
+      <button type="submit" class="button">Book a Consultation</button>
+    </form>
+  </section>
     <div class="section">
         <p style="text-align: center; margin-top: 40px;">
             Contact our team directly at <strong>07988 306731</strong> or
