--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About — Otasso</title>
   <link rel="stylesheet" href="style.css" />
+
+    <link rel="icon" type="image/x-icon" href="icon.jpg.png">
+</head>
+<body>
+
 </head>
 <body class="subpage">
   <header>
