--- a/services.html
+++ b/services.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Services — Otasso</title>
   <link rel="stylesheet" href="style.css" />
+</head>
 
+  
     <link rel="icon" type="image/x-icon" href="icon.jpg.png">
 </head>
 <body>
-
-</head>
 <body class="subpage">
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
@@ -24,7 +24,30 @@
 
   <section class="section">
     <h2>Our Services</h2>
-    <p>We specialize in advanced tax reduction planning, asset protection, and cross-border structuring. Whether you're scaling domestically or internationally, Otasso offers customized legal and financial solutions designed for growth-minded entrepreneurs.</p>
+    <p>At Otasso, we combine financial expertise with legal precision to reduce liabilities, protect assets, and drive business growth.</p>
+
+    <div class="card-grid">
+      <div class="card">
+        <h3>Tax Reduction & Compliance</h3>
+        <p>We design custom tax strategies to help your business reduce liabilities while staying fully compliant with HMRC regulations.</p>
+      </div>
+      <div class="card">
+        <h3>Legal Structuring & Advisory</h3>
+        <p>From shareholder agreements to corporate restructuring, we ensure your business operates on a legally sound foundation.</p>
+      </div>
+      <div class="card">
+        <h3>Financial Advisory</h3>
+        <p>Our profit retention strategies help directors and shareholders extract value tax-efficiently and build long-term resilience.</p>
+      </div>
+      <div class="card">
+        <h3>Start-Up & Growth Support</h3>
+        <p>Whether you're forming a company or scaling one, we’ll help set up your legal and tax frameworks for maximum growth and protection.</p>
+      </div>
+      <div class="card">
+        <h3>Audit & Risk Management</h3>
+        <p>We identify financial and legal risks before they become liabilities through audits, due diligence, and compliance reviews.</p>
+      </div>
+    </div>
   </section>
 
   <footer>
