--- a/about.html
+++ b/about.html
@@ -16,9 +16,10 @@
     <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html" class="active">About</a>
+      <a href="about.html">About</a>
       <a href="services.html">Services</a>
       <a href="contact.html">Contact</a>
+      <a href="careers.html" class="active">Careers</a>
     </nav>
   </header>
 
