--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,11 @@
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
+     <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
-      <a href="contact.html" class="active">Contact</a>
+      <a href="careers.html" class="active">Careers</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
