--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
-      <a href="index.html" class="active">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="services.html">Services</a>
+      <a href="careers.html" class="active">Careers</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
