--- a/services.html
+++ b/services.html
@@ -15,9 +15,10 @@
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
-      <a href="index.html">Home</a>
+     <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="services.html" class="active">Services</a>
+      <a href="services.html">Services</a>
+      <a href="careers.html" class="active">Careers</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
