--- a/careers.html
+++ b/careers.html
@@ -6,6 +6,7 @@
   <title>Careers — Otasso</title>
   <link rel="stylesheet" href="style.css" />
 </head>
+   <link rel="icon" type="image/x-icon" href="icon.jpg.png">
 <body class="subpage">
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
