--- a/about.html
+++ b/about.html
@@ -5,41 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About — Otasso</title>
   <link rel="stylesheet" href="style.css" />
-
-    <link rel="icon" type="image/x-icon" href="icon.jpg.png">
-</head>
-<body>
-
+  <link rel="icon" type="image/x-icon" href="icon.jpg.png">
 </head>
 <body class="subpage">
   <header>
     <img src="logo.png" alt="Otasso Logo" class="logo" />
     <nav>
-          <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="index.html">Home</a>
+      <a href="about.html" class="active">About</a>
       <a href="services.html">Services</a>
-      <a href="careers.html" >Careers</a>
+      <a href="careers.html">Careers</a>
       <a href="contact.html">Contact</a>
-      
     </nav>
   </header>
 
   <section class="section">
     <h2>About Otasso</h2>
-    <p>Founded in 2023 by Jai Kurbaan, Otasso was created with one mission: to help businesses grow by reducing tax burdens legally, efficiently, and strategically. We combine expert legal insight with deep financial strategy to protect your profit and position you for sustainable growth.</p>
+    <p>
+      Founded in 2023 by Jai Kurbaan, Otasso was created with one mission: to help businesses grow by reducing tax burdens legally, efficiently, and strategically. 
+      We combine expert legal insight with deep financial strategy to protect your profit and position you for sustainable growth.
+    </p>
   </section>
- <h3>About Jai Kurbaan</h3>
-        <p>
-            Jai Kurbaan is a driven financial strategist with a passion for innovation and precision. Currently preparing
-            to study Accounting and Finance at a top Russell Group university, he is also completing a summer finance
-            program at the London School of Economics. With aspirations to pursue a law conversion degree, Jai combines
-            financial acumen with legal insight to deliver cost-effective, legally sound marketing strategies at Stanton Penn.
-        </p>
-        <p>
-            As an OMCP-certified professional, he leads industry-spanning marketing initiatives with confidence. His sharp
-            eye for efficiency, leadership of the content creation team, and expertise in AI-driven analytics continue to
-            strengthen Stanton Penn’s competitive edge and deliver measurable results.
-        </p>
+
+  <section class="section alt">
+    <div class="card" style="max-width: 900px; margin: 0 auto; background-color: rgba(255,255,255,0.05); padding: 2rem; border-radius: 12px;">
+      <h3 style="color: #f6d76e;">About Jai Kurbaan</h3>
+      <p>
+        Jai Kurbaan is a driven financial strategist with a passion for innovation and precision. Currently preparing
+        to study Accounting and Finance at a top Russell Group university, he is also completing a summer finance
+        program at the London School of Economics.
+      </p>
+      <p>
+        With aspirations to pursue a law conversion degree, Jai combines financial acumen with legal insight to deliver 
+        cost-effective, legally sound marketing strategies at Stanton Penn. As an OMCP-certified professional, he leads 
+        industry-spanning marketing initiatives with confidence.
+      </p>
+      <p>
+        His sharp eye for efficiency, leadership of the content creation team, and expertise in AI-driven analytics 
+        continue to strengthen Stanton Penn’s competitive edge and deliver measurable results.
+      </p>
+    </div>
+  </section>
+
   <footer>
     <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
   </footer>
