--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       Otasso exists to help high-performing companies protect what they’ve earned and reinvest in what truly matters. We’re not just tax advisors — we’re your legal and financial edge.
     </p>
   </section>
-
+<script src='https://www.noupe.com/embed/0198862181d47b22b51179f7e0c9aac82298.js'></script>
   <footer>
     <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
   </footer>
