--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             <a href="https://linkedin.com/company/otasso" target="_blank">LinkedIn</a>.
         </p>
     </div>
-
+<script src='https://www.noupe.com/embed/0198862181d47b22b51179f7e0c9aac82298.js'></script>
     <footer>
         <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
     </footer>
