--- a/careers.html
+++ b/careers.html
@@ -67,7 +67,7 @@
       </div>
     </div>
   </section>
-
+<script src='https://www.noupe.com/embed/0198862181d47b22b51179f7e0c9aac82298.js'></script>
   <footer>
     <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
   </footer>
