--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       </p>
     </div>
   </section>
-
+<script src='https://www.noupe.com/embed/0198862181d47b22b51179f7e0c9aac82298.js'></script>
   <footer>
     <p>&copy; 2025 Otasso Ltd. All rights reserved.</p>
   </footer>
